--- a/client/src/app/sidebar/sidebar.component.html
+++ b/client/src/app/sidebar/sidebar.component.html
@@ -48,7 +48,7 @@
         <table class="table">
           <tr>
             <td>
-              <span class="glyphicon glyphicon-pencil text-primary"></span>&nbsp;<a routerLink="/report" (click)="reload('report')">گزارش ماهانه</a>
+              <span class="glyphicon glyphicon-pencil text-primary"></span>&nbsp;<a routerLink="/report">گزارش ماهانه</a>
             </td>
           </tr>
         </table>
