--- a/client/src/app/report/report.component.html
+++ b/client/src/app/report/report.component.html
@@ -19,6 +19,41 @@
 
 			</div>
 		</div>
+    <div class=" row form-group">
+			<label class="col-md-4 control-label" for="محل سکونت">شهر</label>
+			<div class="col-md-4">
+        <select id="محل سکونت" name="living_place" class="form-control"
+                [(ngModel)]="repoDate.city" required>
+          <option value="زنجان">زنجان</option>
+          <option value="ابهر">ابهر</option>
+          <option value="خدابنده">خدابنده</option>
+          <option value="خدابنده">تكاب</option>
+          <option value="خدابنده">بيجار</option>
+          <option value="ایجرود">ایجرود</option>
+          <option value="خرمدره">خرمدره</option>
+          <option value="طارم">طارم</option>
+          <option value="ماه‌نشان">ماه‌نشان</option>
+          <option value="سلطانیه">سلطانیه</option>
+          <option value="قیدار">قیدار</option>
+          <option value="هیدج">هیدج</option>
+          <option value="صائین‌قلعه">صائین‌قلعه</option>
+          <option value="آب بر">آب بر</option>
+          <option value="سجاس">سجاس</option>
+          <option value="سهرورد">سهرورد</option>
+          <option value="زرین رود">زرین رود</option>
+          <option value="کرسف">کرسف</option>
+          <option value="گرماب">گرماب</option>
+          <option value="دندی">دندی</option>
+          <option value="نوربهار">نوربهار</option>
+          <option value="زرین‌آباد">زرین‌آباد</option>
+          <option value="ارمغان خانه">ارمغان خانه</option>
+          <option value="چورزق">چورزق</option>
+          <option value="حلب">حلب</option>
+          <option value="نیک پی">نیک پی</option>
+        </select>
+
+			</div>
+		</div>
 
 		<div class="row text-center">
 			<button type="submit" class="btn btn-success">گزارش</button>
