--- a/client/src/app/patient/patient.component.html
+++ b/client/src/app/patient/patient.component.html
@@ -20,6 +20,7 @@
         <th>کد ملی</th>
         <th>شماره پرونده</th>
         <th>نام پزشک</th>
+        <th>هزینه ها</th>
         <th><em class="glyphicon glyphicon-cog"></em></th>
       </tr>
       </thead>
@@ -32,6 +33,9 @@
         <td>{{patient.national_code}}</td>
         <td>{{patient.file_number}}</td>
         <td>{{patient.doctor_name}}</td>
+        <td>
+          <a class="btn btn-default" data-toggle="modal" data-target=".bs-example-modal-lg-expense" (click)="getExpenseByFile(patient.file_number)"><i class="glyphicon glyphicon-usd"></i></a>
+        </td>
         <td align="center">
           <a class="btn btn-default" data-toggle="modal" data-target=".bs-example-modal-lg" (click)="getPatient(patient.id)"><em class="glyphicon glyphicon-pencil"></em></a>
           <a class="btn btn-danger" (click)="deletePatient(patient.id)"><em class="glyphicon glyphicon-trash"></em></a>
@@ -65,7 +69,7 @@
 
 <!-- MMMMMMMMMOOOOOOOOOOOOOODAAAAAAAAAAAAAAAAAAALLLLLLLLLLLLLLLLLLLLLLLLLLLL -->
 
-<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel1">
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -320,5 +324,59 @@
   </div>
 </div>
 
+<!-- /MMMMMMMMMOOOOOOOOOOOOOODAAAAAAAAAAAAAAAAAAALLLLLLLLLLLLLLLLLLLLLLLLLLLL -->
+
+<!-- MMMMMMMMMOOOOOOOOOOOOOODAAAAAAAAAAAAAAAAAAALLLLLLLLLLLLLLLLLLLLLLLLLLLL -->
+
+<div class="modal fade bs-example-modal-lg-expense" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel2">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel1">{{modal_title}}</h4>
+      </div>
+      <div class="modal-body">
+        <div class="panel panel-default panel-table">
+          <div class="panel-heading">
+            <div class="row">
+              <div class="col-md-8 text-center"><h3 class="panel-title">لیست هزینه ها</h3></div>
+              <div class="col-md-2">
+                <input type="text" class="form-control col-md-9 input-sm" [(ngModel)]="searchTerm" name="searchTerm" (keyup)="search()"><i class="glyphicon glyphicon-search"></i>
+              </div>
+            </div>
+          </div>
+          <div class="panel-body text-center">
+            <table class="table table-striped table-bordered table-list table-hover text-center">
+              <thead>
+              <tr>
+                <th class="hidden-xs">ردیف</th>
+                <th>شماره پرونده</th>
+                <th>شماره نامه</th>
+                <th>هزینه واقعی</th>
+                <th>تاریخ</th>
+                <!--<th><em class="glyphicon glyphicon-cog"></em></th>-->
+              </tr>
+              </thead>
+              <tbody>
+              <tr *ngFor="let cost of expenses;let i= index">
+                <td class="hidden-xs">{{i+1}}</td>
+                <td>{{cost.patient_id}}</td>
+                <td>{{cost.letter_number}}</td>
+                <td>{{cost.actual_cost}}</td>
+                <td>{{cost.date}}</td>
+                <!--<td align="center">-->
+                  <!--<a class="btn btn-default" data-toggle="modal" data-target=".bs-example-modal-lg-ExpenseEdit" (click)="getExpense(cost.id)"><em class="glyphicon glyphicon-pencil"></em></a>-->
+                  <!--<a class="btn btn-danger" (click)="deleteExpense(cost.id)"><em class="glyphicon glyphicon-trash"></em></a>-->
+                <!--</td>-->
+              </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 <!-- /MMMMMMMMMOOOOOOOOOOOOOODAAAAAAAAAAAAAAAAAAALLLLLLLLLLLLLLLLLLLLLLLLLLLL -->
+
